-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
the problem was introduced by:
acb6ee1f1f 2020-02-01 | LU-8304 libcfs: convert debug_ctlwq to a completion
the root cause is that libcfs_debug_dumplog() can be called by few threads simultaneously and each thread re-initialize the global state debug_complete unconditionally.
I reverted the patch locally to pass sanity.sh, but I guess we can wrap libcfs_debug_dumplog() with a mutex to serialize calls.
- is related to
-
LU-8304 libcfs_debug_dumplog calls potentially sleeping function in wrong state
-
- Closed
-